--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,4 +1,4 @@
-# Sample workflow for building and deploying a React application to GitHub Pages
+# Workflow for building and deploying a React application to GitHub Pages
 name: Deploy React App to GitHub Pages
 
 on:
@@ -26,16 +26,25 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      # Checkout the repository
       - name: Checkout
         uses: actions/checkout@v4
+        
+      # Setup Node.js environment
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '16'
+          
+      # Install npm dependencies
       - name: Install dependencies
         run: npm install
+        
+      # Build the React application
       - name: Build React app
         run: npm run build
+        
+      # Upload the build artifacts to be deployed
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -49,6 +58,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      # Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
