--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-ip-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ruthgeorgiev.github.io/my-ip-app",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
