--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -2,59 +2,49 @@
 name: Deploy React App to GitHub Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["master"]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
-      # Checkout the repository
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Setup Node.js environment
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '16'
 
-      # Install npm dependencies
       - name: Install dependencies
         run: npm install
 
-      # Build the React application with the environment variable
-      - name: Build React app
+      - name: Print environment variable for debugging
+        run: echo $REACT_APP_IPIFY_API_KEY
         env:
           REACT_APP_IPIFY_API_KEY: ${{ secrets.GEO_API_KEY }}
-        run: |
-          echo "REACT_APP_IPIFY_API_KEY=${{ secrets.GEO_API_KEY }}" >> .env
-          npm run build
 
-      # Upload the build artifacts to be deployed
+      - name: Build React app
+        run: npm run build
+        env:
+          REACT_APP_IPIFY_API_KEY: ${{ secrets.GEO_API_KEY }}
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./build
 
-  # Deployment job
   deploy:
     environment:
       name: github-pages
@@ -62,7 +52,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      # Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
