--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -30,15 +30,14 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      # Directly set the environment variable for testing
       - name: Print environment variable for debugging
-        run: echo "REACT_APP_IPIFY_API_KEY=${{ secrets.GEO_API_KEY }}"
-        env:
-          REACT_APP_IPIFY_API_KEY: ${{ secrets.GEO_API_KEY }}
+        run: echo "REACT_APP_IPIFY_API_KEY=at_5xDNg0w0ivnBgkinSgnbEeyRR1Eub"
 
       - name: Build React app
-        run: npm run build
         env:
-          REACT_APP_IPIFY_API_KEY: ${{ secrets.GEO_API_KEY }}
+          REACT_APP_IPIFY_API_KEY: at_5xDNg0w0ivnBgkinSgnbEeyRR1Eub
+        run: npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
