--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
